--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-agp = "8.2.0-beta05"
-kotlin = "1.9.10"
-compose = "1.5.1"
-compose-compiler = "1.5.3"
-compose-material3 = "1.1.2"
-androidx-activityCompose = "1.7.2"
+agp = "8.7.0"
+kotlin = "1.9.25"
+compose = "1.7.6"
+compose-compiler = "1.5.15"
+compose-material3 = "1.3.1"
+androidx-activityCompose = "1.10.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
